[package]
name = "morse"
version = "0.1.0"
authors = ["Oliver Lee <oliverzlee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
itertools = "0.8"
tokio = "0.1.5"
tokio-file-unix = "0.5.1"
rumqtt = "0.30.1"
